--- a/src/components/SidebarOption.css
+++ b/src/components/SidebarOption.css
@@ -5,9 +5,17 @@
 }
 
 .sidebarOption:hover{
-    background-color:  #F4C2C2;
+    background-color:  #FFE5EA;
+    border-radius: 30px;
+    color: var(--twitter-color);
+    transition: color 300ms ease-out;
 }
 
 .sidebarOption>.MuiSvgIcon-root{
     padding: 20px;
+}
+.sidebarOption>h2{
+    font-weight: 800;
+    font-size: 20px;
+    margin-right: 20px;
 }
