done with sidebar

--- a/src/components/SidebarOption.css
+++ b/src/components/SidebarOption.css
@@ -8,7 +8,7 @@
     background-color:  #FFE5EA;
     border-radius: 30px;
     color: var(--twitter-color);
-    transition: color 300ms ease-out;
+    transition: color 100ms ease-out;
 }
 
 .sidebarOption>.MuiSvgIcon-root{
@@ -18,4 +18,8 @@
     font-weight: 800;
     font-size: 20px;
     margin-right: 20px;
+}
+
+.sidebarOption--active{
+    color:var(--twitter-color);
 }
