--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,1 +1,11 @@
- 
+ .sidebar__tweet{
+     background-color: var(--twitter-color) !important;
+     border: none !important;
+     color:  white !important;
+     font-weight: 900 !important;
+     text-transform: inherit !important;
+     border-radius: 30px !important;
+     height: 50px !important;
+     margin-top: 20px !important;
+     padding: 0 50px !important;
+ }
