--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
  body{
       --twitter-color:#ff0789;
+      --twitter-background:#e6ecf0;
 
+ }
+ .app{
+      display: flex;
+      height: 100vh;
+      max-width: 1300px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0 10px;
  }
