--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -7,5 +7,20 @@
      border-radius: 30px !important;
      height: 50px !important;
      margin-top: 20px !important;
-     padding: 0 50px !important;
+     padding: 0 70px !important;
+ }
+
+ .sidebar{
+     border-right: 1px solid var(--twitter-background);
+     flex:0.3;
+     /* min-width: 250px; */
+     margin-top: 20px;
+     padding-left: 20px;
+     padding-right: 20px;
+ }
+ .sidebar__twittericon{
+     color: var(--twitter-color);
+     font-size: 30px !important;
+     margin-left: 20px;
+     margin-bottom: 20px;
  }
